--- a/index.html
+++ b/index.html
@@ -50,21 +50,27 @@
 					<div class="row max-width">
 						<div class="columns-container-wrapper">
 							<div class="columns-container">
-								<div class="columns equal-heights" style="width: 47%; height: 532px;">
-									<div class="main-content"></div>
-									<div class="columns-block-overlay"></div>
-								</div>
-								<div class="columns equal-heights"
-									 style="width: 47%; text-align: left; margin-left: 6%; height: 532px;">
-									<div class="main-content"><h2>Talend Named a Leader.</h2>
-										<p>We are a leader in the Forrester Wave™: Big Data Fabric, Q2 2018.<br> We
-											earned the highest scores of any vendor in the report in both the Current
-											Offering and Strategy categories.</p>
-										<p><a href="https://info.talend.com/forresterwavebigdata.html?type=hero"
-											  class="button button-cta" target="_blank"
-											  title="Visit https://info.talend.com/forresterwavebigdata.html?type=hero (click to open in a new window)">Download
-											the Report</a></p></div>
-									<div class="columns-block-overlay"></div>
+								<div class="columns equal-heights">
+									<div class="main-content">
+
+
+
+
+
+										<!-- Diagram content -->
+										<div class="cloud-diagram">
+
+
+
+
+										</div>
+
+
+
+
+
+
+									</div>
 								</div>
 							</div>
 						</div>
