--- a/index.html
+++ b/index.html
@@ -171,24 +171,38 @@
 
 
 														<!-- Talend Cloud -->
-														<path class="cls-6 cloud-diagram__item"
+														<path class="cls-6 cloud-diagram__item talend-cloud"
 															  d="M533.79,66.47c4,2.3,4,6.06,0,8.36L392.4,157A15.93,15.93,0,0,1,378,157L265.83,92.27c-4-2.3-4-6.06-.05-8.36L407.21,1.72a16,16,0,0,1,14.42,0Z"/>
 
-
-														<path class="cls-7"
+														<!-- Real-time -->
+														<path class="cls-7 cloud-diagram__item real-time"
 															  d="M671.17,146c4,2.29,4,6.05,0,8.35L529.78,236.57a16,16,0,0,1-14.42,0L403.2,171.82c-4-2.29-4-6,0-8.35L544.59,81.28a16,16,0,0,1,14.43,0Z"/>
-														<path class="cls-8"
+
+														<!-- Data Integration -->
+														<path class="cls-8 cloud-diagram__item data-integration"
 															  d="M807.37,225.81c4,2.3,4,6.06,0,8.36L666,316.36a15.93,15.93,0,0,1-14.42,0L539.41,251.61c-4-2.3-4-6.06,0-8.36L680.8,161.06a15.93,15.93,0,0,1,14.42,0Z"/>
-														<path class="cls-9"
+
+														<!-- Data Quality -->
+														<path class="cls-9 cloud-diagram__item data-quality"
 															  d="M944.92,304.09c4,2.3,4,6.06.05,8.36L803.53,394.64a15.93,15.93,0,0,1-14.42,0L677,329.89c-4-2.3-4-6.06-.05-8.36l141.43-82.19a16,16,0,0,1,14.43,0Z"/>
-														<path class="cls-10"
+
+														<!-- Data Preparation -->
+														<path class="cls-10 cloud-diagram__item data-preparation"
 															  d="M370.8,165.73c4,2.31,4,6.08.05,8.38L229,256.56a16,16,0,0,1-14.47,0L102,191.61c-4-2.3-4-6.08,0-8.38l141.87-82.44a16,16,0,0,1,14.47,0Z"/>
-														<path class="cls-11"
+
+														<!-- MDM Platform -->
+														<path class="cls-11 cloud-diagram__item mdm-platform"
 															  d="M508.6,245.53c4,2.31,4,6.08,0,8.38L366.78,336.35a16,16,0,0,1-14.46,0l-112.49-65c-4-2.3-4-6.07-.05-8.37l141.86-82.45a16,16,0,0,1,14.47,0Z"/>
-														<path class="cls-12"
+
+														<!-- Data Services -->
+														<path class="cls-12 cloud-diagram__item data-services"
 															  d="M643.56,324.87c4,2.3,4,6.06.05,8.36L502.17,415.42a15.93,15.93,0,0,1-14.42,0L375.6,350.67c-4-2.3-4-6.06-.05-8.35L517,260.12a16,16,0,0,1,14.42,0Z"/>
-														<path class="cls-13"
+
+														<!-- Metadata Manager -->
+														<path class="cls-13 cloud-diagram__item metadata"
 															  d="M781.11,403.15c4,2.3,4,6.06,0,8.36L639.73,493.7a16,16,0,0,1-14.43,0L513.15,429c-4-2.3-4-6.06,0-8.36L654.54,338.4a15.93,15.93,0,0,1,14.42,0Z"/>
+
+
 														<g class="cls-3">
 															<g class="cls-14">
 																<path class="cls-15"
