--- a/index.html
+++ b/index.html
@@ -639,27 +639,20 @@
 										<div class="diagram-content__wrap">
 
 											<div id="tooltip--talend-cloud" class="diagram-content">
+													<h2>Talend Cloud</h2>
 
-												<div class="row">
+													<p>Integrate data and people easily with Talend Cloud, a highly scalable and secure managed cloud integration platform-as-a-service (iPaaS).</p>
 
-													<div class="col-sm-9 col-xs-9 product-title"><h2>Talend<br>Cloud</h2></div>
+													<div class="diagram-content__ctas">
+														<a class="button button-cta" href="/products/integration-cloud/">View Details</a>
+
+														<a class="button button-cta" href="https://iam.us.cloud.talend.com/idp/trial-registration?type=home" target="_blank" title="Visit https://iam.us.cloud.talend.com/idp/trial-registration?type=home (click to open in a new window)">Free Trial</a>
 													</div>
-													<div class="row">
-														<div class="col-sm-12">Integrate data and people easily with Talend Cloud, a highly scalable and secure managed cloud integration platform-as-a-service (iPaaS).</div>
+
+													<div class="diagram-content__link">
+														<a href="/products/integration-cloud/">More Cloud Integration Products →</a>
 													</div>
-													<div class="row pp-special-buttons">
-														<div class="col-sm-6 col-xs-6">
-															<a class="button button-cta" href="/products/integration-cloud/">View Details</a>
-														</div>
-														<div class="col-sm-6 col-xs-6">
-															<a class="button button-cta" href="https://iam.us.cloud.talend.com/idp/trial-registration?type=home" target="_blank" title="Visit https://iam.us.cloud.talend.com/idp/trial-registration?type=home (click to open in a new window)">Free Trial</a>
-														</div>
-													</div>
-													<div class="row">
-														<div class="col-sm-12 ">
-															<a href="/products/integration-cloud/">More Cloud Integration Products →</a>
-														</div>
-												</div>
+
 
 
 
