--- a/index.html
+++ b/index.html
@@ -175,31 +175,31 @@
 															  d="M533.79,66.47c4,2.3,4,6.06,0,8.36L392.4,157A15.93,15.93,0,0,1,378,157L265.83,92.27c-4-2.3-4-6.06-.05-8.36L407.21,1.72a16,16,0,0,1,14.42,0Z"/>
 
 														<!-- Real-time -->
-														<path class="cls-7 cloud-diagram__item real-time"
+														<path class="cls-7 cloud-diagram__item real-time" data-tooltip-content="#tooltip--real-time"
 															  d="M671.17,146c4,2.29,4,6.05,0,8.35L529.78,236.57a16,16,0,0,1-14.42,0L403.2,171.82c-4-2.29-4-6,0-8.35L544.59,81.28a16,16,0,0,1,14.43,0Z"/>
 
 														<!-- Data Integration -->
-														<path class="cls-8 cloud-diagram__item data-integration"
+														<path class="cls-8 cloud-diagram__item data-integration" data-tooltip-content="#tooltip--data-integration"
 															  d="M807.37,225.81c4,2.3,4,6.06,0,8.36L666,316.36a15.93,15.93,0,0,1-14.42,0L539.41,251.61c-4-2.3-4-6.06,0-8.36L680.8,161.06a15.93,15.93,0,0,1,14.42,0Z"/>
 
 														<!-- Data Quality -->
-														<path class="cls-9 cloud-diagram__item data-quality"
+														<path class="cls-9 cloud-diagram__item data-quality" data-tooltip-content="#tooltip--data-quality"
 															  d="M944.92,304.09c4,2.3,4,6.06.05,8.36L803.53,394.64a15.93,15.93,0,0,1-14.42,0L677,329.89c-4-2.3-4-6.06-.05-8.36l141.43-82.19a16,16,0,0,1,14.43,0Z"/>
 
 														<!-- Data Preparation -->
-														<path class="cls-10 cloud-diagram__item data-preparation"
+														<path class="cls-10 cloud-diagram__item data-preparation" data-tooltip-content="#tooltip--data-preparation"
 															  d="M370.8,165.73c4,2.31,4,6.08.05,8.38L229,256.56a16,16,0,0,1-14.47,0L102,191.61c-4-2.3-4-6.08,0-8.38l141.87-82.44a16,16,0,0,1,14.47,0Z"/>
 
 														<!-- MDM Platform -->
-														<path class="cls-11 cloud-diagram__item mdm-platform"
+														<path class="cls-11 cloud-diagram__item mdm-platform" data-tooltip-content="#tooltip--mdm-platform"
 															  d="M508.6,245.53c4,2.31,4,6.08,0,8.38L366.78,336.35a16,16,0,0,1-14.46,0l-112.49-65c-4-2.3-4-6.07-.05-8.37l141.86-82.45a16,16,0,0,1,14.47,0Z"/>
 
 														<!-- Data Services -->
-														<path class="cls-12 cloud-diagram__item data-services"
+														<path class="cls-12 cloud-diagram__item data-services" data-tooltip-content="#tooltip--data-services"
 															  d="M643.56,324.87c4,2.3,4,6.06.05,8.36L502.17,415.42a15.93,15.93,0,0,1-14.42,0L375.6,350.67c-4-2.3-4-6.06-.05-8.35L517,260.12a16,16,0,0,1,14.42,0Z"/>
 
 														<!-- Metadata Manager -->
-														<path class="cls-13 cloud-diagram__item metadata"
+														<path class="cls-13 cloud-diagram__item metadata" data-tooltip-content="#tooltip--metadata"
 															  d="M781.11,403.15c4,2.3,4,6.06,0,8.36L639.73,493.7a16,16,0,0,1-14.43,0L513.15,429c-4-2.3-4-6.06,0-8.36L654.54,338.4a15.93,15.93,0,0,1,14.42,0Z"/>
 
 
@@ -639,26 +639,56 @@
 										<div class="diagram-content__wrap">
 
 											<div id="tooltip--talend-cloud" class="diagram-content">
-													<h2>Talend Cloud</h2>
+												<h2>Talend Cloud</h2>
 
-													<p>Integrate data and people easily with Talend Cloud, a highly scalable and secure managed cloud integration platform-as-a-service (iPaaS).</p>
+												<p>Integrate data and people easily with Talend Cloud, a highly scalable and secure managed cloud integration platform-as-a-service (iPaaS).</p>
 
-													<div class="diagram-content__ctas">
-														<a class="button button-cta" href="/products/integration-cloud/">View Details</a>
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="/products/integration-cloud/">View Details</a>
 
-														<a class="button button-cta" href="https://iam.us.cloud.talend.com/idp/trial-registration?type=home" target="_blank" title="Visit https://iam.us.cloud.talend.com/idp/trial-registration?type=home (click to open in a new window)">Free Trial</a>
-													</div>
+													<a class="button button-cta" href="https://iam.us.cloud.talend.com/idp/trial-registration?type=home" target="_blank" title="Visit https://iam.us.cloud.talend.com/idp/trial-registration?type=home (click to open in a new window)">Free Trial</a>
+												</div>
 
-													<div class="diagram-content__link">
-														<a href="/products/integration-cloud/">More Cloud Integration Products →</a>
-													</div>
-
-
-
-
+												<div class="diagram-content__link">
+													<a href="/products/integration-cloud/">More Cloud Integration Products →</a>
+												</div>
 											</div><!-- end .diagram-content -->
 
-										</div>
+
+											<div id="tooltip--real-time" class="diagram-content">
+												<h2>Real-time Big Data Platform</h2>
+
+												<p>Unleash the potential of real-time and IoT analytics by leveraging the power of Spark Streaming and machine learning.</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/big-data/real-time-big-data/">View Details</a>
+
+													<a class="button button-cta" href="https://info.talend.com/trial-talend-big-data-sandbox.html?type=home" target="_blank" title="Visit https://info.talend.com/trial-talend-big-data-sandbox.html?type=home (click to open in a new window)">Free Trial</a>
+												</div>
+
+												<div class="diagram-content__link">
+													<a href="https://www.talend.com/products/big-data/">More Real-time Big Data Platform Products →</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+
+											<div id="tooltip--data-integration" class="diagram-content">
+												<h2>Data Integration</h2>
+
+												<p>Develop 10x faster with a modern data integration and data quality platform for relational databases, flat files, cloud apps and platforms.</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/data-integration/data-management-platform/">View Details</a>
+
+													<a class="button button-cta" href="https://info.talend.com/prodevaltedi.html?type=home" target="_blank" title="Visit https://info.talend.com/prodevaltedi.html?type=home (click to open in a new window)">Free Trial</a>
+												</div>
+
+												<div class="diagram-content__link">
+													<a href="https://www.talend.com/products/data-integration/">More Data Integration Products →</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+										</div><!-- end .diagram-content__wrap -->
 
 
 
