final content + polish

--- a/index.html
+++ b/index.html
@@ -688,6 +688,86 @@
 												</div>
 											</div><!-- end .diagram-content -->
 
+
+											<div id="tooltip--data-quality" class="diagram-content">
+												<h2>Data Quality</h2>
+
+												<p>Leverage the full power and scale of big data with the leading data integration platform built on Spark for cloud and on-premises</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/data-quality/">View Details</a>
+
+													<a class="button button-cta" href="https://info.talend.com/prodevaltedi.html?type=home" target="_blank" title="Visit https://info.talend.com/prodevaltedi.html?type=home (click to open in a new window)">Free Trial</a>
+												</div>
+
+												<div class="diagram-content__link">
+													<a href="https://www.talend.com/products/data-quality/">More Data Quality Products →</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+
+											<div id="tooltip--data-preparation" class="diagram-content">
+												<h2>Data Preparation</h2>
+
+												<p>Transform how IT and users work together with governed access to self-service tools for discovering, cleansing, and sharing data.</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/data-preparation/">View Details</a>
+
+													<a class="button button-cta" href="https://iam.us.cloud.talend.com/idp/trial-registration?type=home" target="_blank" title="Visit https://iam.us.cloud.talend.com/idp/trial-registration?type=home (click to open in a new window)">Free Trial</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+
+											<div id="tooltip--mdm-platform" class="diagram-content">
+												<h2>MDM Platform</h2>
+
+												<p>Unleash the potential of data, applications, and processes by creating a single “version of the truth” for cloud, big data, and mobile applications.</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/mdm/mdm-platform/">View Details</a>
+
+													<a class="button button-cta" href="https://info.talend.com/request_mdm.html?type=home" target="_blank" title="Visit https://info.talend.com/request_mdm.html?type=home (click to open in a new window)">Request Info</a>
+												</div>
+
+												<div class="diagram-content__link">
+													<a href="https://www.talend.com/products/mdm/">More MDM Platform Products →</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+
+											<div id="tooltip--data-services" class="diagram-content">
+												<h2>Data Services</h2>
+
+												<p>Deliver trusted, timely data with a flexible, real-time application integration platform that increases agility and productivity.</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/application-integration/data-services-platform/">View Details</a>
+
+													<a class="button button-cta" href="https://info.talend.com/request_data_services.html?type=home" target="_blank" title="Visit https://info.talend.com/request_data_services.html?type=home (click to open in a new window)">Request Info</a>
+												</div>
+
+												<div class="diagram-content__link">
+													<a href="https://www.talend.com/products/application-integration/">More Application Integration Products →</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+
+											<div id="tooltip--metadata" class="diagram-content">
+												<h2>Metadata Manager</h2>
+
+												<p>Increase governance with end-to-end metadata visibility and control across your entire IT landscape.</p>
+
+												<div class="diagram-content__ctas">
+													<a class="button button-cta" href="https://www.talend.com/products/metadata-manager/">View Details</a>
+
+													<a class="button button-cta" href="https://info.talend.com/request_metadatamanager.html?type=home" target="_blank" title="Visit https://info.talend.com/request_metadatamanager.html?type=home (click to open in a new window)">Request Info</a>
+												</div>
+											</div><!-- end .diagram-content -->
+
+
+
+
 										</div><!-- end .diagram-content__wrap -->
 
 
