--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 
 	<!-- Diagram CSS -->
-	<link rel="stylesheet" type="text/css" href="/css/diagram.dev.css">
+	<link rel="stylesheet" type="text/css" href="css/diagram.dev.css">
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="/js/diagram.dev.js"></script>
+	<script src="js/diagram.dev.js"></script>
 
 </head>
 
